--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>Y este es el parrafo de inicio</p>
-        <p id="edadUsuario">Tu edad es: </p>
+        <p id="edadUsuario">Tu edad en 20 años es: </p>
         <script src="script.js"></script>
     </body>
 </html>
