--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,13 @@
                     cosas incréibles que se pueden
                     hacer con las ramas
                 </p>
+                <p>
+                    Los blogs son la mejor forma de 
+                    compartir información y tus ideas. 
+                    Mucho mas que ir a conferencias o salir
+                    en Youtube. Excepto si eres un rockstar. Pero 
+                    estadisticamente no le eres.... por ahora.
+                </p>
             </div> 
         </div>
     </body>
