--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline">
-                    Tu blog de confianza
+                    Tu blog maestro
                 </span>
             </div>
             <div id="post">
@@ -30,6 +30,7 @@
                     en Youtube. Excepto si eres un rockstar. Pero 
                     estadisticamente no le eres.... por ahora.
                 </p>
+                <p>Suscribete y dale like</p>
             </div> 
         </div>
     </body>
