--- a/blogpost.html
+++ b/blogpost.html
@@ -18,9 +18,9 @@
                     del post
                 </h1>
                 <p>
-                    Y este es el parrafo de inicio
+                    Y este es el párrafo de inicio
                     donde vamos a explicar las
-                    cosas incréibles que se pueden
+                    cosas increíbles que se pueden
                     hacer con las ramas
                 </p>
                 <p>
